--- a/4 Inference and Modeling/Inference and Modeling Notes.Rmd
+++ b/4 Inference and Modeling/Inference and Modeling Notes.Rmd
@@ -676,25 +676,9 @@ X_hat <- 0.48
 ## p-Values
 
 -   The null hypothesis is the hypothesis that there is no effect. In this case, the null hypothesis is that the spread is 0, or p=0.5.
-
-```{=html}
-<!-- -->
-```
 -   The p-value is the probability of detecting an effect of a certain size or larger when the null hypothesis is true.
-
-```{=html}
-<!-- -->
-```
 -   We can convert the probability of seeing an observed value under the null hypothesis into a standard normal random variable. We compute the value of that corresponds to the observed result, and then use that to compute the p-value.
-
-```{=html}
-<!-- -->
-```
 -   If a 95% confidence interval does not include our observed value, then the p-value must be smaller than 0.05.
-
-```{=html}
-<!-- -->
-```
 -   It is preferable to report confidence intervals instead of p-values, as confidence intervals give information about the size of the estimate and p-values do not.
 
 ### Code: Computing a p-value for observed spread of 0.02
@@ -811,8 +795,7 @@ pollster_results
 
 ## Exercise 3. Comparing to actual results - p
 
-The final tally for the popular vote was Clinton 48.2% and Trump 46.1%. Add a column called `hit` to `pollster_results`
-that states if the confidence interval included the true proportion p=0.482 or not. What proportion of confidence intervals included p?
+The final tally for the popular vote was Clinton 48.2% and Trump 46.1%. Add a column called `hit` to `pollster_results` that states if the confidence interval included the true proportion p=0.482 or not. What proportion of confidence intervals included p?
 
 -   Use the `mutate` function to define a new variable called ‘hit’.
 
@@ -1005,4 +988,528 @@ polls %>%
   ggplot(aes(x = pollster, y = error)) +
   geom_point() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+# Section 4 Overview
+
+In Section 4, you will look at statistical models in the context of election polling and forecasting.
+
+After completing Section 4, you will be able to:
+
+-   Understand how aggregating data from different sources, as poll aggregators do for poll data, can improve the precision of a prediction
+
+-   Understand how to fit a multilevel model to the data to forecast, for example, election results.
+
+-   Explain why a simple aggregation of data is insufficient to combine results because of factors such as pollster bias.
+
+-   Use a data-driven model to account for additional types of sampling variability such as pollster-to-pollster variability.
+
+### Poll Aggregators
+
+-   Poll aggregators combine the results of many polls to simulate polls with a large sample size and therefore generate more precise estimates than individual polls.
+
+-   Polls can be simulated with a Monte Carlo simulation and used to construct an estimate of the spread and confidence intervals.
+
+-   The actual data science exercise of forecasting elections involves more complex statistical modeling, but these underlying ideas still apply.
+
+#### Code: Simulating polls
+
+Note that to compute the exact 95% confidence interval, we would use `qnorm(.975)*SE_hat` instead of `2*SE_hat`.
+
+```{r}
+d <- 0.039
+Ns <- c(1298, 533, 1342, 897, 774, 254, 812, 324, 1291, 1056, 2172, 516)
+p <- (d+1)/2
+
+# calculate confidence intervals of the spread
+confidence_intervals <- sapply(Ns, function(N){
+    X <- sample(c(0,1), size=N, replace=TRUE, prob = c(1-p, p))
+    X_hat <- mean(X)
+    SE_hat <- sqrt(X_hat*(1-X_hat)/N)
+    2*c(X_hat, X_hat - 2*SE_hat, X_hat + 2*SE_hat) - 1
+})
+
+# generate a data frame storing results
+polls <- data.frame(poll = 1:ncol(confidence_intervals),
+                    t(confidence_intervals), sample_size = Ns)
+names(polls) <- c("poll", "estimate", "low", "high", "sample_size")
+polls
+```
+
+![](images/clipboard-3513150804.png)
+
+dashed line is actual election outcome
+
+solid line is 0
+
+#### Code: Calculating the spread of combined polls
+
+Note that to compute the exact 95% confidence interval, we would use `qnorm(.975)` instead of 1.96.
+
+In this case, d is an estimate of the spread.
+
+```{r}
+library(dplyr)
+sum(polls$sample_size)
+d_hat <- polls %>%
+    summarize(avg = sum(estimate*sample_size) / sum(sample_size)) %>%
+    .$avg
+
+p_hat <- (1+d_hat)/2
+moe <- 2*1.96*sqrt(p_hat*(1-p_hat)/sum(polls$sample_size))   
+round(d_hat*100,1)
+round(moe*100, 1)
+```
+
+![](images/clipboard-2634744098.png)
+
+### Pollsters and Multilevel Models
+
+-   Different poll aggregators generate different models of election results from the same poll data. This is because they use different statistical models.
+
+-   We will use actual polling data about the popular vote from the 2016 US presidential election to learn the principles of statistical modeling.
+
+### Poll Data and Pollster Bias
+
+![](images/clipboard-627922606.png)
+
+-   *Pollster bias* reflects the fact that repeated polls by a given pollster have an expected value different from the actual spread and different from other pollsters. Each pollster has a different bias.
+
+-   The urn model does not account for pollster bias. We will develop a more flexible data-driven model that can account for effects like bias.
+
+#### Code: Generating simulated poll data
+
+```{r}
+library(dslabs)
+library(ggplot2)
+data(polls_us_election_2016)
+names(polls_us_election_2016)
+
+# keep only national polls from week before election with a grade considered reliable
+polls <- polls_us_election_2016 %>%
+    filter(state == "U.S." & enddate >= "2016-10-31" &
+               (grade %in% c("A+", "A", "A-", "B+") | is.na(grade)))
+
+# add spread estimate
+polls <- polls %>%
+    mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100)
+
+# compute estimated spread for combined polls
+d_hat <- polls %>%
+    summarize(d_hat = sum(spread * samplesize) / sum(samplesize)) %>%
+    .$d_hat
+
+# compute margin of error
+p_hat <- (d_hat+1)/2
+moe <- 1.96 * 2 * sqrt(p_hat*(1-p_hat)/sum(polls$samplesize))
+
+# histogram of the spread
+polls %>%
+    ggplot(aes(spread)) +
+    geom_histogram(color="black", binwidth = .01)
+```
+
+The data does not appear to be normally distributed and the spread moe seems to be larger than what the simulation suggests.
+
+#### Code: Investigating poll data and pollster bias
+
+```{r}
+# number of polls per pollster in week before election
+polls %>% group_by(pollster) %>% summarize(n())
+
+# plot results by pollsters with at least 6 polls
+polls %>% group_by(pollster) %>%
+    filter(n() >= 6) %>%
+    ggplot(aes(pollster, spread)) +
+    geom_point() +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+# standard errors within each pollster
+polls %>% group_by(pollster) %>%
+    filter(n() >= 6) %>%
+    summarize(se = 2 * sqrt(p_hat * (1-p_hat) / median(samplesize)))
+```
+
+-   Our initial estimate of the spread did not include the actual spread. Part of the reason is that different pollsters have different numbers of polls in our dataset, and each pollster has a bias.
+
+<!-- -->
+
+-   *Pollster bias* reflects the fact that repeated polls by a given pollster have an expected value different from the actual spread and different from other pollsters. Each pollster has a different bias.
+
+<!-- -->
+
+-   The urn model does not account for pollster bias. We will develop a more flexible data-driven model that can account for effects like bias.
+
+![](images/clipboard-1364472134.png)
+
+However, there appears to be differences *across the polls*. Note, for example, how the USC Dornsife/LA Times pollster is predicting a 4% win for Trump, while Ipsos is predicting a win larger than 5% for Clinton. The theory we learned says nothing about different pollsters producing polls with different expected values. All the polls should have the same expected value.
+
+### Data-Driven Models
+
+-   Instead of using an urn model where each poll is a random draw from the same distribution of voters, we instead define a model using an urn that contains poll results from all possible pollsters.
+
+#### Code 
+
+Note that to compute the exact 95% confidence interval, we would use `qnorm(.975)` instead of 1.96.
+
+```{r}
+# collect last result before the election for each pollster
+one_poll_per_pollster <- polls %>% group_by(pollster) %>%
+    filter(enddate == max(enddate)) %>%      # keep latest poll
+    ungroup()
+
+# histogram of spread estimates
+one_poll_per_pollster %>%
+    ggplot(aes(spread)) + geom_histogram(binwidth = 0.01)
+
+# construct 95% confidence interval
+results <- one_poll_per_pollster %>%
+    summarize(avg = mean(spread), se = sd(spread)/sqrt(length(spread))) %>%
+    mutate(start = avg - 1.96*se, end = avg + 1.96*se)
+round(results*100, 1)
+```
+
+# Assessment 4.1: Statistical Models
+
+## Exercise 1 - Heights Revisited
+
+We have been using *urn models* to motivate the use of probability models. However, most data science applications are not related to data obtained from urns. More common are data that come from individuals. Probability plays a role because the data come from a random sample. The random sample is taken from a population and the urn serves as an analogy for the population.
+
+Let's revisit the heights dataset. For now, consider `x` to be the heights of all males in the data set. Mathematically speaking, `x` is our population. Using the urn analogy, we have an urn with the values of `x` in it.
+
+What are the population average and standard deviation of our population?
+
+-   Execute the lines of code that create a vector `x` that contains heights for all males in the population.
+
+-   Calculate the average of `x`.
+
+-   Calculate the standard deviation of `x`.
+
+```{r}
+# Load the 'dslabs' package and data contained in 'heights'
+library(dslabs)
+data(heights)
+
+# Make a vector of heights from all males in the population
+x <- heights %>% filter(sex == "Male") %>%
+  .$height
+
+# Calculate the population average. Print this value to the console.
+mean(x)
+
+# Calculate the population standard deviation. Print this value to the console.
+sd(x)
+```
+
+# Exercise 2 - Sample the population of heights
+
+Call the population average computed above μ and the standard deviation σ. Now take a sample of size 50, with replacement, and construct an estimate for μ and σ.
+
+-   Use the `sample` function to sample `N` values from `x`.
+
+-   Calculate the mean of the sampled heights.
+
+-   Calculate the standard deviation of the sampled heights.
+
+```{r}
+# The vector of all male heights in our population `x` has already been loaded for you. You can examine the first six elements using `head`.
+head(x)
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Define `N` as the number of people measured
+N <- 50
+
+# Define `X` as a random sample from our population `x`
+X <- sample(x, N, replace = TRUE)
+X
+
+# Calculate the sample average. Print this value to the console.
+mean(X)
+
+# Calculate the sample standard deviation. Print this value to the console.
+sd(X)
+```
+
+## Exercise 3 - Sample and Population Averages
+
+What does the central limit theory tell us about the sample average and how it is related to μ, the population average?
+
+![](images/clipboard-2593918152.png)
+
+## Exercise 4 - Confidence Interval Calculation
+
+We will use  X¯ as our estimate of the heights in the population from our sample size N. We know from previous exercises that the standard estimate of our error  X¯−μ is  σ/N−−√.
+
+Construct a 95% confidence interval for μ.
+
+-   Use the `sd` and `sqrt` functions to define the standard error `se`
+
+-   Calculate the 95% confidence intervals using the `qnorm` function. Save the lower then the upper confidence interval to a variable called `ci`.
+
+```{r}
+# The vector of all male heights in our population `x` has already been loaded for you. You can examine the first six elements using `head`.
+head(x)
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Define `N` as the number of people measured
+N <- 50
+
+# Define `X` as a random sample from our population `x`
+X <- sample(x, N, replace = TRUE)
+
+# Define `se` as the standard error of the estimate. Print this value to the console.
+se <- sd(X)/sqrt(N)
+se
+
+
+# Construct a 95% confidence interval for the population average based on our sample. Save the lower and then the upper confidence interval to a variable called `ci`.
+ci <- c(mean(X) - qnorm(0.975)*se, mean(X) + qnorm(0.975)*se)
+ci
+
+```
+
+## Exercise 5 - Monte Carlo Simulation for Heights
+
+Now run a Monte Carlo simulation in which you compute 10,000 confidence intervals as you have just done. What proportion of these intervals include μ?
+
+-   Use the `replicate` function to replicate the sample code for `B <- 10000` simulations. Save the results of the replicated code to a variable called `res`. The replicated code should complete the following steps: -1. Use the `sample` function to sample `N` values from `x`. Save the sampled heights as a vector called `X`. -2. Create an object called `interval` that contains the 95% confidence interval for each of the samples. Use the same formula you used in the previous exercise to calculate this interval. -3. Use the `between` function to determine if μ is contained within the confidence interval of that simulation.
+
+-   Finally, use the `mean` function to determine the proportion of results in `res` that contain mu.
+
+```{r}
+library(tidyverse)
+# Define `mu` as the population average
+mu <- mean(x)
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Define `N` as the number of people measured
+N <- 50
+
+# Define `B` as the number of times to run the model
+B <- 10000
+
+# Define an object `res` that contains a logical vector for simulated intervals that contain mu
+res <- replicate(B,{
+    X <- sample(x, N, replace = TRUE)
+    se <- sd(X)/sqrt(N)
+    interval <- c(mean(X) - qnorm(0.975)*se, mean(X) + qnorm(0.975)*se)
+    between(mu, mean(X) - qnorm(0.975)*se, mean(X) + qnorm(0.975)*se)
+})
+res
+
+# Calculate the proportion of results in `res` that include mu. Print this value to the console.
+mean(res)
+```
+
+## Exercise 6 - Visualizing Polling Bias
+
+In this section, we used visualization to motivate the presence of pollster bias in election polls. Here we will examine that bias more rigorously. Lets consider two pollsters that conducted daily polls and look at national polls for the month before the election.
+
+Is there a poll bias? Make a plot of the spreads for each poll.
+
+-   Use `ggplot` to plot the spread for each of the two pollsters.
+
+-   Define the x- and y-axes usingusing `aes()` within the `ggplot` function.
+
+-   Use `geom_boxplot` to make a boxplot of the data.
+
+-   Use `geom_point` to add data points to the plot.
+
+```{r}
+# Load the libraries and data you need for the following exercises
+library(dslabs)
+library(dplyr)
+library(ggplot2)
+data("polls_us_election_2016")
+
+# These lines of code filter for the polls we want and calculate the spreads
+polls <- polls_us_election_2016 %>% 
+  filter(pollster %in% c("Rasmussen Reports/Pulse Opinion Research","The Times-Picayune/Lucid") &
+           enddate >= "2016-10-15" &
+           state == "U.S.") %>% 
+  mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100) 
+
+# Make a boxplot with points of the spread for each pollster
+polls %>% ggplot(aes(pollster, spread)) +
+  geom_boxplot() +
+  geom_point()
+  
+```
+
+## Exercise 7 - Defining Pollster Bias
+
+![](images/clipboard-3001157115.png)
+
+The data do seem to suggest there is a difference between the pollsters. However, these data are subject to variability. Perhaps the differences we observe are due to chance. Under the urn model, both pollsters should have the same expected value: the election day difference, d.
+
+Which of the following statements best reflects what we need to know to determine if our data fit the urn model?
+
+![](images/clipboard-2494585816.png)
+
+## Exercise 8 -  Derive Expected Value
+
+![](images/clipboard-4091911361.png)
+
+![](images/clipboard-2549027184.png)
+
+## Exercise 9 - Expected Value and Standard Error of Poll 1
+
+![![](images/clipboard-3909403616.png)](images/clipboard-3151239086.png)
+
+## Exercise 10 - Expected Value and Standard Error of Poll 2
+
+![](images/clipboard-1913928163.png)
+
+![](images/clipboard-1724690287.png)
+
+## Exercise 11 - Difference in Expected Values Between Polls
+
+![](images/clipboard-1014861947.png)
+
+![](images/clipboard-158475081.png)
+
+## Exercise 12 - Standard Error of the Difference Between Polls
+
+![](images/clipboard-2564854021.png)
+
+## Exercise 13 - Compute the Estimates
+
+![](images/clipboard-4005585586.png)
+
+-   Group the data by pollster.
+
+```{=html}
+<!-- -->
+```
+-   Summarize the standard deviation of the spreads for each of the two pollsters. Name the standard deviation `s`.
+
+```{=html}
+<!-- -->
+```
+-   Store the pollster names and standard deviations of the spreads (
+
+![](images/clipboard-3648528788.png)) in an object called `sigma`.
+
+```{r}
+# The `polls` data have already been loaded for you. Use the `head` function to examine them.
+head(polls)
+
+# Create an object called `sigma` that contains a column for `pollster` and a column for `s`, the standard deviation of the spread
+sigma <- polls %>%
+  group_by(pollster) %>%
+  summarize(s = sd(spread))
+
+# Print the contents of sigma to the console
+sigma
+```
+
+## Exercise 14 - Probability Distribution of the Spread
+
+![![](images/clipboard-4048451252.png)](images/clipboard-1101494716.png)
+
+## Exercise 15 - Calculate the 95% Confidence Interval of the Spreads
+
+![](images/clipboard-2273378332.png)
+
+-   Use pipes `%>%` to pass the data `polls` on to functions that will group by pollster and summarize the average spread, standard deviation, and number of polls per pollster.
+
+-   Calculate the estimate by subtracting the average spreads.
+
+-   Calculate the standard error using the standard deviations of the spreads and the sample size.
+
+-   Calculate the 95% confidence intervals using the `qnorm` function. Save the lower and then the upper confidence interval to a variable called `ci`.
+
+```{r}
+# The `polls` data have already been loaded for you. Use the `head` function to examine them.
+head(polls)
+
+# Create an object called `res` that summarizes the average, standard deviation, and number of polls for the two pollsters.
+res <- polls %>%
+  group_by(pollster) %>%
+  summarize(avg = mean(spread), s = sd(spread), N = n())
+
+# Store the difference between the larger average and the smaller in a variable called `estimate`. Print this value to the console.
+estimate <- max(res$avg) - min(res$avg)
+estimate
+
+# Store the standard error of the estimates as a variable called `se_hat`. Print this value to the console.
+se_hat <- sqrt(res$s[2]^2/res$N[2] + res$s[1]^2/res$N[1])
+se_hat
+
+# Calculate the 95% confidence interval of the spreads. Save the lower and then the upper confidence interval to a variable called `ci`.
+ci <- c(estimate - qnorm(0.975)*se_hat, estimate + qnorm(0.975)*se_hat)
+ci
+```
+
+## Exercise 16 - Calculate the P-value
+
+The confidence interval tells us there is relatively strong pollster effect resulting in a difference of about 5%. Random variability does not seem to explain it.
+
+Compute a p-value to relay the fact that chance does not explain the observed pollster effect.
+
+-   Use the `pnorm` function to calculate the probability that a random value is larger than the observed ratio of the estimate to the standard error.
+
+-   Multiply the probability by 2, because this is the two-tailed test.
+
+```{r}
+# We made an object `res` to summarize the average, standard deviation, and number of polls for the two pollsters.
+res <- polls %>% group_by(pollster) %>% 
+  summarize(avg = mean(spread), s = sd(spread), N = n()) 
+
+# The variables `estimate` and `se_hat` contain the spread estimates and standard error, respectively.
+estimate <- res$avg[2] - res$avg[1]
+se_hat <- sqrt(res$s[2]^2/res$N[2] + res$s[1]^2/res$N[1])
+
+# Calculate the p-value
+1 - (pnorm(estimate/se_hat) - pnorm(-estimate/se_hat))
+```
+
+-   `pnorm(...)`: Computes the cumulative distribution function (CDF) of the standard normal distribution.
+
+-   `estimate/se_hat` and `-estimate/se_hat` are the Z-scores for a two-sided test.
+
+-   The p-value is calculated as the probability of observing a Z-score as extreme as the one calculated (or more extreme) under the null hypothesis.
+
+## Exercise 17 - Comparing Within-Poll and Between-Poll Variability
+
+![ *t-statistic* ](images/clipboard-1782270149.png)
+
+Note that our data has more than two pollsters. We can also test for
+pollster effect using all pollsters, not just two. The idea is to
+compare the variability across polls to variability within polls. We can
+construct statistics to test for effects and approximate their
+distribution. The area of statistics that does this is called Analysis
+of Variance or ANOVA.
+
+Compute the average and standard deviation for each pollster and examine the variability across the averages and how it compares to the variability within the pollsters, summarized by the standard deviation.
+
+-   Group the `polls` data by pollster.
+
+-   Summarize the average and standard deviation of the spreads for each pollster.
+
+-   Create an object called `var` that contains three columns: pollster, mean spread, and standard deviation.
+
+-   Be sure to name the column for mean `avg` and the column for standard deviation `s`.
+
+```{r}
+# Execute the following lines of code to filter the polling data and calculate the spread
+polls <- polls_us_election_2016 %>% 
+  filter(enddate >= "2016-10-15" &
+           state == "U.S.") %>%
+  group_by(pollster) %>%
+  filter(n() >= 5) %>% 
+  mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100) %>%
+  ungroup()
+
+# Create an object called `var` that contains columns for the pollster, mean spread, and standard deviation. Print the contents of this object to the console.
+var <- polls %>% 
+  group_by(pollster) %>% 
+  summarize(avg = mean(spread), s = sd(spread))
+var
 ```
