--- a/4 Inference and Modeling/Inference and Modeling Notes.Rmd
+++ b/4 Inference and Modeling/Inference and Modeling Notes.Rmd
@@ -2049,6 +2049,8 @@ clinton_EV_2 <- replicate(1000, {
 mean(clinton_EV_2 > 269)    # over 269 votes wins election
 ```
 
+![](images/clipboard-1275540088.png)
+
 ## Forecasting
 
 ![](images/clipboard-1026693294.png)
@@ -2105,6 +2107,188 @@ polls_us_election_2016 %>%
 ```
 
 # Assessment 6.1: Election Forecasting
+
+## Exercise 1 - Confidence Intervals of Polling Data
+
+For each poll in the polling data set, use the CLT to create a 95% confidence interval for the spread. Create a new table called `cis` that contains columns for the lower and upper limits of the confidence intervals.
+
+-   Use pipes `%>%` to pass the `poll` object on to the `mutate` function, which creates new variables.
+
+-   Create a variable called `X_hat` that contains the estimate of the proportion of Clinton voters for each poll.
+
+-   Create a variable called `se` that contains the standard error of the spread.
+
+-   Calculate the confidence intervals using the `qnorm` function and your calculated `se`.
+
+-   Use the `select` function to keep the following columns: `state`, `startdate`, `enddate`, `pollster`, `grade`, `spread`, `lower`, `upper`.
+
+```{r}
+# Load the libraries and data
+library(dplyr)
+library(dslabs)
+data("polls_us_election_2016")
+
+# Create a table called `polls` that filters by  state, date, and reports the spread
+polls <- polls_us_election_2016 %>% 
+  filter(state != "U.S." & enddate >= "2016-10-31") %>% 
+  mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100)
+
+# Create an object called `cis` that has the columns indicated in the instructions
+cis <- polls %>% 
+  mutate(
+    X_hat = (spread+1)/2,
+    se = 2 * sqrt(X_hat*(1-X_hat)/samplesize),
+    lower = spread - qnorm(0.975) * se,
+    upper = spread + qnorm(0.975) * se
+           ) %>%
+  select(state, startdate, enddate, pollster, grade, spread, lower, upper)
+
+cis
+```
+
+## Exercise 2 - Compare to Actual Results
+
+You can add the final result to the `cis` table you just created using the `left_join` function as shown in the sample code.
+
+Now determine how often the 95% confidence interval includes the actual result.
+
+-   Create an object called `p_hits` that contains the proportion of intervals that contain the actual spread using the following two steps.
+
+-   Use the `mutate` function to create a new variable called `hit` that contains a logical vector for whether the `actual_spread` falls between the `lower` and `upper` confidence intervals.
+
+-   Summarize the proportion of values in `hit` that are true using the `mean` function inside of `summarize`.
+
+```{r}
+# Add the actual results to the `cis` data set
+add <- results_us_election_2016 %>% mutate(actual_spread = clinton/100 - trump/100) %>% select(state, actual_spread)
+ci_data <- cis %>% mutate(state = as.character(state)) %>% left_join(add, by = "state")
+
+# Create an object called `p_hits` that summarizes the proportion of confidence intervals that contain the actual value. Print this object to the console.
+p_hits <- ci_data %>% 
+  mutate(
+    hit = lower <= actual_spread & actual_spread <= upper
+    ) %>%
+    summarize(mean(hit))
+
+p_hits
+```
+
+## Exercise 3 - Stratify by Pollster and Grade
+
+Now find the proportion of hits for each pollster. Show only pollsters with at least 5 polls and order them from best to worst. Show the number of polls conducted by each pollster and the FiveThirtyEight grade of each pollster.
+
+-   Create an object called `p_hits` that contains the proportion of intervals that contain the actual spread using the following steps.
+
+-   Use the `mutate` function to create a new variable called `hit` that contains a logical vector for whether the `actual_spread` falls between the `lower` and `upper` confidence intervals.
+
+-   Use the `group_by` function to group the data by pollster.
+
+-   Use the `filter` function to filter for pollsters that have at least 5 polls.
+
+-   Summarize the proportion of values in `hit` that are true as a variable called `proportion_hits`. Also create new variables for the number of polls by each pollster (`n`) using the `n()` function and the grade of each poll (`grade`) by taking the first row of the grade column.
+
+-   Use the `arrange` function to arrange the `proportion_hits` in descending order.
+
+```{r}
+# The `cis` data have already been loaded for you
+add <- results_us_election_2016 %>% mutate(actual_spread = clinton/100 - trump/100) %>% select(state, actual_spread)
+ci_data <- cis %>% mutate(state = as.character(state)) %>% left_join(add, by = "state")
+
+# Create an object called `p_hits` that summarizes the proportion of hits for each pollster that has at least 5 polls.
+p_hits <- ci_data %>% 
+  mutate(
+    hit = lower <= actual_spread & actual_spread <= upper
+    ) %>%
+  group_by(pollster) %>%
+  filter(n() >= 5) %>%
+  summarize(proportion_hits = mean(hit == TRUE), n = n(), grade = grade[1]) %>%
+  arrange(desc(proportion_hits))
+p_hits
+```
+
+## Exercise 4 - Stratify by State
+
+Repeat the previous exercise, but instead of pollster, stratify by state. Here we can't show grades.
+
+-   Create an object called `p_hits` that contains the proportion of intervals that contain the actual spread using the following steps.
+
+-   Use the `mutate` function to create a new variable called `hit` that contains a logical vector for whether the `actual_spread` falls between the `lower` and `upper` confidence intervals.
+
+-   Use the `group_by` function to group the data by state.
+
+-   Use the `filter` function to filter for states that have more than 5 polls.
+
+-   Summarize the proportion of values in `hit` that are true as a variable called `proportion_hits`. Also create new variables for the number of polls in each state using the `n()` function.
+
+-   Use the `arrange` function to arrange the `proportion_hits` in descending order.
+
+```{r}
+# The `cis` data have already been loaded for you
+add <- results_us_election_2016 %>% mutate(actual_spread = clinton/100 - trump/100) %>% select(state, actual_spread)
+ci_data <- cis %>% mutate(state = as.character(state)) %>% left_join(add, by = "state")
+
+# Create an object called `p_hits` that summarizes the proportion of hits for each state that has more than 5 polls.
+p_hits <- ci_data %>% 
+  mutate(
+    hit = lower <= actual_spread & actual_spread <= upper
+    ) %>%
+  group_by(state) %>%
+  filter(n() >= 5) %>%
+  summarize(proportion_hits = mean(hit == TRUE), n = n()) %>%
+  arrange(desc(proportion_hits))
+p_hits
+```
+
+## Exercise 5- Plotting Prediction Results
+
+Make a barplot based on the result from the previous exercise.
+
+-   Reorder the states in order of the proportion of hits.
+
+-   Using `ggplot`, set the aesthetic with state as the x-variable and proportion of hits as the y-variable.
+
+-   Use `geom_bar` to indicate that we want to plot a barplot. Specifcy `stat = "identity"` to indicate that the height of the bar should match the value.
+
+-   Use `coord_flip` to flip the axes so the states are displayed from top to bottom and proportions are displayed from left to right.
+
+```{r}
+# The `p_hits` data have already been loaded for you. Use the `head` function to examine it.
+head(p_hits)
+
+# Make a barplot of the proportion of hits for each state
+p_hits %>% 
+  mutate(state = reorder(state, proportion_hits)) %>%
+  ggplot(aes(state, proportion_hits)) +
+  geom_bar(stat = "identity") +
+  coord_flip() 
+p_hits
+```
+
+## Exercise 6 - Predicting the Winner
+
+Even if a forecaster's confidence interval is incorrect, the overall predictions will do better if they correctly called the right winner.
+
+Add two columns to the `cis` table by computing, for each poll, the difference between the predicted spread and the actual spread, and define a column `hit` that is true if the signs are the same.
+
+-   Use the `mutate` function to add two new variables to the `cis` object: `error` and `hit`.
+
+-   For the `error` variable, subtract the actual spread from the spread.
+
+-   For the `hit` variable, return "TRUE" if the poll predicted the actual winner. Use the `sign` function to check if their signs match - learn more with `?sign`.
+
+-   Save the new table as an object called `errors`.
+
+-   Use the `tail` function to examine the last 6 rows of `errors`.
+
+```{r}
+# The `cis` data have already been loaded. Examine it using the `head` function.
+head(cis)
+
+# Create an object called `errors` that calculates the difference between the predicted and actual spread and indicates if the correct winner was predicted
+
+
+# Examine the last 6 rows of `errors`
+```
 
 ## The t-Distribution
 
